Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2363

lod does not support statfs /proc entries

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0
    • Lustre 2.4.0
    • 3
    • 5625

      # find /proc/fs/lustre/lod -type f -readable -exec cat {} \; > /dev/null
      cat: /proc/fs/lustre/lod/lustre-MDT0000-mdtlov/kbytesavail: Operation not supported
      cat: /proc/fs/lustre/lod/lustre-MDT0000-mdtlov/kbytesfree: Operation not supported
      cat: /proc/fs/lustre/lod/lustre-MDT0000-mdtlov/kbytestotal: Operation not supported
      cat: /proc/fs/lustre/lod/lustre-MDT0000-mdtlov/blocksize: Operation not supported
      cat: /proc/fs/lustre/lod/lustre-MDT0000-mdtlov/filesfree: Operation not supported
      cat: /proc/fs/lustre/lod/lustre-MDT0000-mdtlov/filestotal: Operation not supported
      

            keith Keith Mannthey (Inactive)
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: